--- a/web/bundles/cadpaz/css/geral.css
+++ b/web/bundles/cadpaz/css/geral.css
@@ -438,6 +438,7 @@ a:visited{
     font-weight:600;
     color:#4c4c4c;
     transition:all linear 0.15s;
+    text-decoration: none;
 }
  
 .tab-links a:hover {
